openstack_dashboard/static/dashboard/less/horizon.less
@import "../../bootstrap/less/bootstrap.less";
@import "../../bootstrap/less/datepicker.less";

/* new clearfix */
.clearfix:after {
    visibility: hidden;
    display: block;
    font-size: 0;
    content: " ";
    clear: both;
    height: 0;
    }
* html .clearfix             { zoom: 1; } /* IE6 */
*:first-child+html .clearfix { zoom: 1; } /* IE7 */

@font-face {
  font-family: 'anivers';
  src: url('/static/dashboard/fonts/Anivers_Regular-webfont.eot');
  src: url('/static/dashboard/fonts/Anivers_Regular-webfont.eot?iefix') format('eot'),
       url('/static/dashboard/fonts/Anivers_Regular-webfont.woff') format('woff'),
       url('/static/dashboard/fonts/Anivers_Regular-webfont.ttf') format('truetype'),
       url('/static/dashboard/fonts/Anivers_Regular-webfont.svg#webfont3JLVF59W') format('svg');
  font-weight: normal;
  font-style: normal;
}

a {
  color: #43a1d6;
}

ul {
    list-style: none;
    margin: 0;
}

dt {
  font-weight: bold;
}

#main_content {
  padding-left: 250px;
  padding-right: 25px;
}

.topbar {
  background: #f2f2f2;
  border-bottom: 1px solid #e5e5e5;
  padding: 10px 25px;
  margin-top: 0;
  margin-left: -25px;
  margin-bottom: 20px;
  margin-right: -25px;
  min-width: 700px;
}

.topbar .switcher_bar {
  display: inline-block;
  height: auto;
  width: 160px;
  background-position: 140px center;
  margin-bottom: 0;
  font-size: 11px;
  margin-left: 20px;
  padding: 0;
  background-image: url(/static/dashboard/img/drop_arrow.png);
  border: 1px solid #c0d9e4;
  background-color: #e9f5fa;
  background-repeat: no-repeat;
}

.topbar .switcher_bar a {
  padding: 2px 10px 1px;
  margin-left: 0;
  display: block;
}

.topbar .switcher_bar ul {
  width: 130px;
}

#user_info {
    color: #888;
    margin: auto 0;
}

#user_info > a {
    margin-left: 25px;
    font-size: 11px !important;
}

.page-header {
  margin: 0;
  padding: 0;
  border: 0;
  font-family: anivers;
}

h2 {
    color: #6a6a6a;
    font-size: 30px;
    font-weight: normal;
}

body {
  background-color: #fff;
  min-width: 890px;
}

/* Login Splash Page */

#splash {
  background: #fafafa;
}

#splash .login {
  background: #fff url(/static/dashboard/img/logo-splash.png) no-repeat center 35px;
  position: absolute;
  top: 80px;
  left: 50%;
  margin: 0 0 0 -195px;
  padding-top: 170px;
  width: 390px;
  border: 1px solid #e1e1e1;
  max-height: none;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
  -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
  -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
  -webkit-background-clip: padding-box;
  -moz-background-clip: padding-box;
  background-clip: padding-box;

  form {
    .error {
      width: 100%;
    }
    input {
      width: 350px;
    }
    select {
      width: 360px;
    }
  }
}

#splash .help-block {
  display: none;
}

#create_container_form .modal-footer{
    margin-top: 190px;
}

.nav li a {
    color: #8EACB7;
    text-shadow: none;
}

.container-fluid {
    padding-left: 0;
}

.sidebar {
    background: #edf9ff;
    border-right: 5px solid #e5e5e5;
    border-bottom: 5px solid #e5e5e5;
    float: left;
}

.sidebar h4 {
    margin-left: 14px;
    color: #999;
}

.sidebar .nav-tabs {
    margin-top: -34px;
}

.sidebar .nav-tabs li.active a {
    background-color: #edf9ff;
}

h1.brand {
    width: 100%;
    margin: 0;
    background-color: #f5f5f5;
    padding-bottom: 40px;
}

h1.brand a {
    background: url(/static/dashboard/img/logo.png) top left no-repeat;
    display: block;
    float: left;
    width: 116px;
    height: 123px;
    text-indent: -9999px;
    margin-left: 56px;
    margin-top: 15px;
    margin-bottom: 25px;
}


/* Tenant Dropdown */


a.current_item {
    width: 163px;
    float: left;
}

a.current_item:hover {
    text-decoration: none;
}

a.current_item:hover h3, a.current_item:hover h4 {
    color: #39738c;
}

.sidebar .switcher_bar {
    width: 190px;
    height: 38px;
    padding: 5px 0;
    margin-left: 14px;
    margin-bottom: 15px;
}

.sidebar .switcher_bar a.dropdown-toggle {
  display: block;
  padding: 5px 0;
  background-image: url(/static/dashboard/img/drop_arrow.png);
  border: 1px solid #c0d9e4;
  background-color: #e9f5fa;
  background-repeat: no-repeat;
  background-position: 167px 23px;
}

.sidebar .switcher_bar a.dropdown-toggle:hover {
  text-decoration: none;
  background-color: #cde8f4;
}

.sidebar .switcher_bar:focus {
  outline: none;
}

.sidebar .switcher_bar h3 {
    color: #4790ae;
    font-size: 16px;
    margin: -6px 0 0 14px;
    padding: 0;
    overflow: hidden;
    text-overflow:ellipsis;
    white-space: nowrap;
    &:hover {
      white-space: normal;
      overflow: visible;
      text-overflow: none;
      padding-right: 1em;
      word-wrap: break-word;
    }
}

.sidebar .switcher_bar h4 {
    color: #6fabc4;
    font-size: 10px;
    text-transform: uppercase;
    font-weight: normal;
    padding: 0;
}


.sidebar .switcher_bar ul {
    border: 1px solid #c0d9e4;
    margin-left: -1px;
    width: 190px;
}

.sidebar .switcher_bar li a:hover{
  background: #92d6f1;
}


#usage {
    margin-bottom: 25px;
    height: 125px;
}

.usage_block {
      background: #e8f8ff;
  color: #84b6c5;
  border: 1px solid #afe3fb;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
    float: left;
    width: 29%;
    margin-right: 5%;
    min-height: 125px;
}

.usage_block.last {
    margin-right: 0;
}


.usage_block h3 {
  background: #cef0ff;
  color: #4fa5bf;
  font-weight: normal;
  padding: 0 0 0 10px;
  border-bottom: 1px solid #c6e7f5;
  -webkit-border-top-left-radius: 5px;
  -webkit-border-top-right-radius: 5px;
  -moz-border-radius-topleft: 5px;
  -moz-border-radius-topright: 5px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}
.usage_block ul {
    margin: 10px;
}

.usage_block .quantity { font-size: 25px; }

.usage_block li {
  font-size: 11px;
  margin: 0 0 15px 0;
}
/* ... */

